changed z indeex of toolbar to stop overlap with elements

--- a/src/styles/partials/Nav-scss/Nav.scss
+++ b/src/styles/partials/Nav-scss/Nav.scss
@@ -6,6 +6,7 @@
     width:100%;
     background: #2A2E43;
     height: 56px;
+    z-index: 10;
 }
 
 .toolbar_nav {
